syntax = "proto3";

package example.corner_cases;

option go_package = "github.com/casnerano/protoc-gen-go-rbac/example/pb/corner_cases";

import "google/protobuf/empty.proto";
import "proto/rbac.proto";

service MixedTypesAccess {
  option (protoc_gen_go_rbac.service_rules).role_based = {
    allowed_roles: ["admin"],
    requirement: ANY
  };

  rpc OverrideWithPolicies(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (protoc_gen_go_rbac.method_rules).policy_based = {
      policy_names: ["positive-policy-1"],
      requirement: ALL
    };
  };


  rpc OverrideWithRoles(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (protoc_gen_go_rbac.method_rules).role_based = {
      allowed_roles: ["admin"],
      requirement: ANY
    };
  };

  rpc OverrideWithAuthentication(google.protobuf.Empty) returns (google.protobuf.Empty) {
    option (protoc_gen_go_rbac.method_rules).require_authentication = true;
  };
}